--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ header {
           position: relative;
           top: 0;
           width: 100%;
-          padding: 30px 100px;
+          padding: 30px 30px;
           display: flex;
           justify-content: space-between;
           align-items: center;
@@ -78,7 +78,6 @@ header .navigation a:hover {
           letter-spacing: 2px;
           line-height: 60px;
           margin-bottom: 30px;
-          margin-left: 30px;
 }
 
 .content .info h2 span {
@@ -91,7 +90,7 @@ header .navigation a:hover {
           font-size: 16px;
           font-weight: 500;
           margin-bottom: 40px;
-          margin-left: 30px;
+
           color: #fff;
           font-family: 'Courier Prime', monospace;
 
@@ -149,6 +148,7 @@ header .navigation a:hover {
 
 label {
           display: none;
+          padding-right: 20px;
 }
 
 #check {
@@ -158,7 +158,7 @@ label {
 
 /* Responsice stles */
 
-@media (max-width: 960px) {
+@media (max-width: 798px) {
           header .navigation {
                     display: none;
           }
@@ -224,6 +224,7 @@ label {
           .content .info h2 {
                     font-size: 45px;
                     line-height: 50px;
+                    margin-right: 100px;
           }
 
           .content .info h2 span {
@@ -233,6 +234,7 @@ label {
 
           .content .info p {
                     font-size: 14px;
+                    margin-right: 30px;
 
           }
 }
@@ -359,7 +361,7 @@ i.hidden {
           position: relative;
           width: 60%;
           max-height: 30px;
-          left: 30px;
+          left: 50px;
           bottom: 20px;
 }
 
