--- a/styles.css
+++ b/styles.css
@@ -262,8 +262,8 @@ label {
           display: flex;
 
           flex-direction: column;
-          width: 70%;
-          height: 170px;
+          width: 100%;
+          height: 100%;
           max-height: 170;
           margin: 30px auto;
           margin-bottom: 200px;
@@ -285,7 +285,7 @@ label {
 
 .sites img {
           width: 100%;
-          height: 200px;
+          max-height: 200px;
 }
 
 
@@ -305,7 +305,7 @@ label {
           /* add some padding to the div */
           width: 60%;
           margin: 0 auto;
-          height: 45px;
+          max-height: 1px;
           display: flex;
           justify-content: space-between;
 
@@ -323,7 +323,7 @@ label {
           /* add some padding to the div */
           width: 60%;
           margin: 0 auto;
-          height: 45px;
+          height: 1px;
           display: flex;
           justify-content: flex-start;
           align-items: center;
@@ -341,7 +341,8 @@ label {
           padding-bottom: 10px;
           text-decoration: wavy;
           width: auto;
-          font-size: 10px;
+          font-size: 8px;
+          padding-top: 15px;
 
 
 }
